// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item list test Filtered 1`] = `
<div
  className="discussion-selection-item-container"
>
  <div
    className="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div>
        <span>
          item 
        </span>
        <span
          className="discussion-selection-highlight"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="arrow-icon"
    >
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Item list test NTI-6655: Open Bin Forums 1`] = `
<div
  className="discussion-selection-item-container"
>
  <div
    className="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div>
        Annoucments
      </div>
    </div>
    <div
      className="arrow-icon"
    >
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
  <div
    className="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div>
        Discussions
      </div>
    </div>
    <div
      className="arrow-icon"
    >
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`Item list test Simple list 1`] = `
<div
  className="discussion-selection-item-container"
>
  <div
    className="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div>
        <span
          className="discussion-selection-highlight"
        >
          item
        </span>
        <span>
           1
        </span>
      </div>
    </div>
    <div
      className="arrow-icon"
    >
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
  <div
    className="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div>
        <span
          className="discussion-selection-highlight"
        >
          item
        </span>
        <span>
           2
        </span>
      </div>
    </div>
    <div
      className="arrow-icon"
    >
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
  <div
    className="discussion-selection-item"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div>
        <span
          className="discussion-selection-highlight"
        >
          item
        </span>
        <span>
           3
        </span>
      </div>
    </div>
    <div
      className="arrow-icon"
    >
      <i
        className="icon-chevron-right"
      />
    </div>
  </div>
</div>
`;
